--- a/Timer.html
+++ b/Timer.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Секундомер</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="wrapper">
@@ -19,6 +19,6 @@
         <button id="button-stop">Стоп</button>
         <button id="button-res">Сбросить</button>
     </div>
-    <script src="./script/script.js"></script>
+    <script src="../script/script.js"></script>
 </body>
 </html>
