--- a/Timer.html
+++ b/Timer.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="https://moscocloud.github.io/stopwatch">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Секундомер</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="wrapper">
@@ -19,6 +18,6 @@
         <button id="button-stop">Стоп</button>
         <button id="button-res">Сбросить</button>
     </div>
-    <script src="../script/script.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 </html>
